Add "compatibility" section

--- a/tip/575.md
+++ b/tip/575.md
@@ -51,8 +51,11 @@ can now be used to protect `Tcl_UtfNext()` calls too.
 
 # Implementation
 
-Implementation is in development in branch tip-575
+Implementation is in branch tip-575
 
+# Compatibility
+
+As long as Tcl is compiled with -DTCL_UTF_MAX=3, this is fully upwards compatible.
 
 # Copyright
 
