TIP #584 (Better introspection for ttk) now in voting state

--- a/tip/584.md
+++ b/tip/584.md
@@ -1,8 +1,8 @@
 # TIP 584: Better introspection for ttk
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Pending
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        24-Aug-2020
 	Post-History:   
 	Keywords:       Tk ttk introspection
