--- a/tip/582.md
+++ b/tip/582.md
@@ -1,13 +1,16 @@
 # TIP 582: Comments in Expressions
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        13-Aug-2020
 	Post-History:
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-582
+	Votes-For:      DKF, JN, KBK, KW, MC, SL, FV
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
