--- a/tip/582.md
+++ b/tip/582.md
@@ -1,6 +1,6 @@
 # TIP 582: Comments in Expressions
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        13-Aug-2020
