Reduce scope of TIP #590, change its title

--- a/tip/590.md
+++ b/tip/590.md
@@ -1,4 +1,4 @@
-# TIP 590: Case-Sensitive Package Names
+# TIP 590: Recommend lowercase Package Names
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -7,21 +7,13 @@
 	Post-History:
 	Keywords:       package
 	Tcl-Version:    8.7
-	Tcl-Branch:	case-sensitive-pkg
+	Tcl-Branch:	tip-590
 -----
 
 # Abstract
 
-This TIP proposes to make the Tcl package mechanism fully
-case-sensitive.
-
-This TIP is - at first sight - the opposite of [TIP #339](339.md), which
-was rejected at that time. However the goal is the same: Make
-it possible to start using lowercase package names while
-still keeping maximum compatibility with Tcl 8.5/8.6.
-
-Quote from [TIP #339](339.md) which also applies to this TIP: "Most people
-will likely simply start to write all package names lower-case after this change".
+This TIP proposes to rename some package name to lowercase, and
+recommend lowercase packagenames.
 
 # Rationale
 
@@ -37,37 +29,7 @@ Some are distributed from within Tcl (tcl::tommath, zlib, TclOO, zipfs), some
 are distributed as tm modules (http, msgcat, platform), some
 are in the battery-included Tcl distribution (Thread, Ttrace, sqlite3).
 
-Also, some strange current behavior:
-
-<pre>
-    % package require SQLITE3
-    can't find package SQLITE3
-    % load {} SQLITE3
-    package "SQLITE3" isn't loaded statically
-    % package require sqlite3
-    3.32.3
-    % load {} sqlite3
-    % load {} SQLITE3
-    % load {} sqlite
-    package "sqlite" isn't loaded statically
-</pre>
-
-So the sqlite3 package is only available in lowercase form.
-But as soon as it is loaded, it is recognized in uppercase
-form as well. It looks like the package mechanism is almost
-case-sensitive, but in a few places case-insensitive
-compares are used when handling package names.
-
 # Specification
-
-* All remains of case-insensitive handling of package names
-(mainly in tclLoad.c) are eliminated. The "package" mechanism
-becomes fully case-sensitive, the strange behavior as described
-above can no longer be observed but is considered an error.
-
-* Package names can be UPPERCASE, lowercase, CamelCase, all
-different forms are considered distinct packages which
-can live happily side-by-side.
 
 * In order to bring some consistency in package names, this
 TIP proposes to rename some packages. The old package names
@@ -85,29 +47,32 @@ This means that both "package require tcl" and "package require Tcl"
 can be used interchangably. But "package require TCL" won't work.
 The old names will be deprecated, but not removed, not even in Tcl 9.0.
 
-* The rules for calculating the symbol for the "&lt;packagename>_Init"
-proc in dynamically loaded libraries stay almost the same: Still the
-first character of the package name is converted to uppercase,
-all the other characters to lowercase. One change: If the package
-name contains "::", the two colons will be removed from the symbol name.
-This allows the (internal, for test purposes only) "Tcltest"
-package to be renamed to "tcl::test", without conflicting
-with the (global) "tcltest" package.
-
 * From now on, the recommended way to name packages is lowercase.
 
-* The "pkgName" argument of `Tcl_StaticPackage` doesn't need to
-be camelcased any more.
+# Caveat
+
+The "load" and "unload" command have an optional `?packageName?` argument,
+which isn't actually a packageName at all. It's more like a prefix, which
+is title-cased and appended with "_Init" (or "_Unload") for determining
+the initialization function of the loaded library. There's a separate
+[ticket](https://core.tcl-lang.org/tcl/tktview?name=ea39ab591e)
+on that. That's why the "load" and "unload" still use Titlecase
+arguments like "Tk", not "tk". Originally, solving this was part
+of this TIP, but it's out of scope now: It's not necessary to
+make the transition to lowercase package names, so this can be
+solved separately later.
+
+The same holds for the _packageName_ argument of the
+`Tcl_StaticPackage()` function.
 
 # Compatibility
 
-This is almost compatible with Tcl 8.5/8.6, except for the
-current strange behavior of the "load" command, which
-will no longer work case-insensitive.
+This is 100% compatible with Tcl 8.5/8.6. UPPERCASE or
+Titlecase package names still work as before.
 
 # Reference Implementation
 
-In tcl branch case-sensitive-pkg
+In tcl branch tip-590
 
 # Copyright
 
