Formatting and mention Tk's "tip-590" branch

--- a/tip/590.md
+++ b/tip/590.md
@@ -53,7 +53,7 @@ The old names will be deprecated, but not removed, not even in Tcl 9.0.
 
 The "load" and "unload" command have an optional `?packageName?` argument,
 which isn't actually a packageName at all. It's more like a prefix, which
-is title-cased and appended with "_Init" (or "_Unload") for determining
+is title-cased and appended with "\_Init" (or "\_Unload") for determining
 the initialization function of the loaded library. There's a separate
 [ticket](https://core.tcl-lang.org/tcl/tktview?name=ea39ab591e)
 on that. That's why the "load" and "unload" still use Titlecase
@@ -63,7 +63,8 @@ make the transition to lowercase package names, so this can be
 solved separately later.
 
 The same holds for the _packageName_ argument of the
-`Tcl_StaticPackage()` function.
+`Tcl_StaticPackage()` function, this argument
+should still be Titlecase as well.
 
 # Compatibility
 
@@ -72,7 +73,7 @@ Titlecase package names still work as before.
 
 # Reference Implementation
 
-In tcl branch tip-590
+In tcl branch "tip-590". Tk has its "tip-590" branch too.
 
 # Copyright
 
