Tweak TIP #590: Make the "dde" and "registry" package names guessable from the filename

--- a/tip/590.md
+++ b/tip/590.md
@@ -29,6 +29,10 @@ Some are distributed from within Tcl (tcl::tommath, zlib, TclOO, zipfs), some
 are distributed as tm modules (http, msgcat, platform), some
 are in the battery-included Tcl distribution (Thread, Ttrace, sqlite3).
 
+Further on, on Windows there are 2 packages which' entry points
+symbols cannot be guessed. The reason is their filenames: "tcldde14.dll"
+resp. "tclreg13.dll", while their package names are "dde" resp. registry"
+
 # Specification
 
 * In order to bring some consistency in package names, this
@@ -49,6 +53,15 @@ The old names will be deprecated, but not removed, not even in Tcl 9.0.
 
 * From now on, the recommended way to name packages is lowercase.
 
+* Extend the "load" command, such that if a library name starts with
+"tcl" (or contains "tcl" just after the starting "lib"), this part will
+be stripped completely in stead of only the "lib" part. This makes the
+entry symbol of "tcldde13.dll" guessable.
+
+* Rename the directory "reg" to "registry" and the file  "tclreg14.dll"
+to "tclregistry14.dll". This makes the entry point "Registry_Init"
+guessable from the filename.
+
 # Caveat
 
 The "load" and "unload" command have an optional `?packageName?` argument,
@@ -68,8 +81,12 @@ should still be Titlecase as well.
 
 # Compatibility
 
-This is 100% compatible with Tcl 8.5/8.6. UPPERCASE or
-Titlecase package names still work as before.
+This is almost 100% compatible with Tcl 8.5/8.6. UPPERCASE or
+Titlecase package names still work as before. The only possible
+difference is made in package names starting with "tcl", such as "Tclx".
+Such packages cannot be "load"ed any more without explicitly
+naming the "Tclx" prefix. I tested TclX with this change, and it
+works fine, because it's pkgIndex contains an implicit "Tclx" prefix.
 
 # Reference Implementation
 
