Make TIP #325 (systray/sysnotify) better reflect what is actually implemented.

--- a/tip/325.md
+++ b/tip/325.md
@@ -33,17 +33,21 @@ Both the tk systray and the tk sysnotify commands will present a script-level pu
 
  > **tk systray create** _image_ _text_ _b1\_\callback_ _b3\_\callback_
 
-Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and optional callbacks that fire on a Button-1  or Button-3 event.
+Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and callbacks that fire on a Button-1  or Button-3 event.
 
-> **tk systray modify** _option?_ 
+> **tk systray modify** _option_ 
 
-Modifies either the image, string, or callback (Button-1 or Button-3).
+Modifies either the image, text string, or callback (Button-1 or Button-3).
+
+> **tk systray destroy**
+
+Removes the icon from the systray.
 
 # Sysnotify Interface
 
 > **tk sysnotify** _title_ _message_ 
 
-Creates and display a system notification with a brief title and longer body message.
+Creates and display a system notification with a title and body message.
 
 # Example
 
