Update TIP 325 proposal to reflect API changes

--- a/tip/325.md
+++ b/tip/325.md
@@ -31,11 +31,11 @@ Both the tk systray and the tk sysnotify commands will present a script-level pu
 
 # Systray Interface
 
- > **tk systray create** _image_ _text_ _b1\_\callback_ _b3\_\callback_
+ > **tk systray create** _-image_ _?image?_ _-text_ _?text?_ _-button1_ _?callback?_ _-button3_ _?callback?_ 
 
 Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and callbacks that fire on a Button-1  or Button-3 event.
 
-> **tk systray modify** _option_ 
+> **tk systray configure ** _option_ _?option?_
 
 Modifies either the image, text string, or callback (Button-1 or Button-3).
 
@@ -55,7 +55,7 @@ systray:
 
     image create photo book -data R0lGODlhDwAPAKIAAP//////AP8AAMDAwICAgAAAAAAAAAAAACwAAAAADwAPAAADSQhA2u5ksPeKABKSCaya29d4WKgERFF0l1IMQCAKatvBJ0OTdzzXI1xMB3TBZAvATtB6NSLKleXi3OBoLqrVgc0yv+DVSEUuFxIAOw==
 
-    tk systray create book "Systray sample" {puts "Here is the systray output"} {puts "here is another example"}
+    tk systray create -image book -text "Systray sample" -button1 {puts "Here is the systray output"} -button3 {puts "here is another example"}
 
 sysnotify:
 
