Fix syntax for optional options in TIP #325

--- a/tip/325.md
+++ b/tip/325.md
@@ -31,11 +31,11 @@ Both the tk systray and the tk sysnotify commands will present a script-level pu
 
 # Systray Interface
 
- > **tk systray create** _-image_ _?image?_ _-text_ _?text?_ _-button1_ _?callback?_ _-button3_ _?callback?_ 
+ > **tk systray create** _-image_ _image_ _?-text_ _text?_ _?-button1_ _callback?_ _?-button3_ _callback?_ 
 
 Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and callbacks that fire on a Button-1  or Button-3 event.
 
-> **tk systray configure** _option_ _?option?_
+> **tk systray configure** _?option?_ _?value option value ...?_
 
 Modifies either the image, text string, or callback (Button-1 or Button-3).
 
