It is Tcl-Version, not Tk-Version

--- a/tip/591.md
+++ b/tip/591.md
@@ -5,7 +5,7 @@
 	Vote:           Pending
 	Created:        13-Nov-2020
 	Keywords:       Tk, bindings
-	Tk-Version:    8.7
+	Tcl-Version:    8.7
 -----
 
 # Abstract
