TIP #584 accepted 6/0/0: YES: 6 (Culler, Decoster, Fellows, Vogel, Walzer). NO: -. PRESENT: -. Vote conclusion email was sent 15-Nov-2020 to Tcl Core list. Implementation was merged the same day.

--- a/tip/584.md
+++ b/tip/584.md
@@ -1,8 +1,12 @@
 # TIP 584: Better introspection for ttk
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Pending
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
+	Vote-Summary:   Accepted 6/0/0
+	Votes-For:      MC, JD, DKF, FV, KW
+	Votes-Against:  none
+	Votes-Present:  none
 	Created:        24-Aug-2020
 	Post-History:   
 	Keywords:       Tk ttk introspection
