Remove 'implementation detail' which is no longer true in current implementation (for a very good reason ....)

--- a/tip/325.md
+++ b/tip/325.md
@@ -27,7 +27,7 @@ popular across all platforms.
 
 Existing code from the winico and tktray extension packages has been refactored and ported into Tk's core; this code utilizes an acceptable license in order to repurpose it for a systray command. The sysnotify command will be a new implementation. On Windows and Mac it will make use of native system API's, and on X11 it will include a conditional dependency on libnotify, falling back to a pure-Tcl implementation (derived from the "notifywindow" tklib package) if libnotify is not present. 
 
-Both the tk systray and the tk sysnotify commands will present a script-level public API implementing the proposed interface, outlined below. The C code will implement an internal "\_systray" and "\_sysnotify" API owing to the significantly different designs of winico and tktray. The Mac version, while new for this TIP, will follow this general design as well.
+Both the tk systray and the tk sysnotify commands will present a script-level public API implementing the proposed interface, outlined below.
 
 # Systray Interface
 
