TIP's #586 and #588 are accepted now.

--- a/tip/467.md
+++ b/tip/467.md
@@ -50,7 +50,7 @@ Proposed URL for the new repository will be <https://core.tcl-lang.org/tips>
 
 ## Backwards compatibility
 
- * _tip.tcl.tk/<NUM>.html_ should still show a rendered result. This could be redirected to _core.tcl-lang.org/tips/doc/trunk/tip/<NUM>.md_
+ * _tip.tcl.tk/<NUM>.html_ should still show a rendered result. This could be redirected to _core.tcl-lang.org/tips/doc/main/tip/<NUM>.md_
 
  * _tip.tcl.tk_ offers several converted formats \(XML, \*roff, ...\). The fossil option will be to use the _core.tcl-lang.org/tips/file/tip/<NUM>.md?download_ URL to get the raw Markdown downloads. For getting the other options one could convert the markdown source file using something like pandoc.
 
