--- a/tip/586.md
+++ b/tip/586.md
@@ -1,13 +1,17 @@
 # TIP 586: C String Parsing Support for binary scan
 	Author:         Christian Werner <undroidwish@googlemail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        18-Sep-2020
 	Post-History:
 	Keywords:       binary
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-586-binary-scan-c-string
+	Vote-Summary:   Accepted 6/0/0
+	Votes-For:      DKF, FV, JN, KBK, KW, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
