--- a/tip/588.md
+++ b/tip/588.md
@@ -1,13 +1,17 @@
 # TIP 588: Unicode for (X11) keysyms
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        23-Oct-2020
 	Post-History:
 	Keywords:       X11
 	Tcl-Version:    8.7
 	Tk-Branch:	keysym-unicode
+	Vote-Summary:   Accepted 6/0/0
+	Votes-For:      DKF, FV, JN, KBK, KW, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
