TIP591: ttk::notebook scrollwheel: add horizontal scrollwheel.

--- a/tip/591.md
+++ b/tip/591.md
@@ -20,6 +20,8 @@ If the mouse pointer is over the tab area of a ttk::notepad:
    *   Moving the mousewheel down will activate the previous tab.
    *   Moving the mousewheel up will activate the next tab.
 
+This should happen for vertical and horizontal mousewheel operation, like in the scrollbar.
+
 # Rationale
 
 I have seen that somewhere and I find it very handy. Try it out:
@@ -46,6 +48,10 @@ ttk::bindMouseWheel TNotebook { ttk::notebook::CycleTab %W }
 </pre>
 
 which activates this functionality.
+
+The vertical mousewheel bindings are pending.
+
+There is a Tk branch tip591 including this functionality.
 
 # Copyright
 
