Horizontal scrollwheel is also working, so no pending implementation.

--- a/tip/591.md
+++ b/tip/591.md
@@ -21,6 +21,8 @@ If the mouse pointer is over the tab area of a ttk::notepad:
    *   Moving the mousewheel up will activate the next tab.
 
 This should happen for vertical and horizontal mousewheel operation, like in the scrollbar.
+The horizontal mousewheel is bound to Shift-Mousewheel.
+Some special mices invoke this bining directly by a tiltable scrollwheel.
 
 # Rationale
 
@@ -48,8 +50,6 @@ ttk::bindMouseWheel TNotebook { ttk::notebook::CycleTab %W }
 </pre>
 
 which activates this functionality.
-
-The vertical mousewheel bindings are pending.
 
 There is a Tk branch tip591 including this functionality.
 
