Final textual tweak, and TIP #590 now in voting state

--- a/tip/590.md
+++ b/tip/590.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        4-Nov-2020
 	Post-History:
 	Keywords:       package
@@ -12,7 +12,7 @@
 
 # Abstract
 
-This TIP proposes to rename some package name to lowercase, and
+This TIP proposes to rename some package names to lowercase, and
 recommend lowercase packagenames.
 
 # Rationale
@@ -31,7 +31,7 @@ are in the battery-included Tcl distribution (Thread, Ttrace, sqlite3).
 
 Further on, on Windows there are 2 packages which' entry points
 symbols cannot be guessed. The reason is their filenames: "tcldde14.dll"
-resp. "tclreg13.dll", while their package names are "dde" resp. registry"
+resp. "tclreg13.dll", while their package names are "dde" resp. "registry"
 
 # Specification
 
