Reduce TIP #481 scope

--- a/tip/481.md
+++ b/tip/481.md
@@ -12,9 +12,7 @@
 # Abstract
 
 This TIP proposes enhancing various C API functions which having a `int *` parameter,
-to be used with a `size_t *` parameter as well. In addition, a new `Tcl_GetValue()`
-function is proposed which can retrieve a signed or unsigned (wide) integer or a
-float/double/long double from a `Tcl_Obj`, .
+to be used with a `size_t *` parameter as well.
 
 # Rationale
 
@@ -48,28 +46,6 @@ a macro of the same name, so depending on the actual size of the variable where 
 points to, the switch between the two function versions are done automatically. So, the
 new functions don't need to be used in code, the original function can be used pointing to
 a size_t length variable as well.
-
- > int **Tcl\_GetValue**\(Tcl\_Interp \*interp, Tcl\_Obj \*_objPtr_, void \*_valuePtr_, int _flags_\)
-
-This functions is able to function the same as Tcl\_GetIntFromObj, Tcl\_GetLongFromObj,
-Tcl\_GetWideFromObj and Tcl\_GetDoubleFromObj. The flags argument determines the actual
-conversion done. The following flags are possible.
-
- > **TCL\_TYPE\_I**(int \| long \| Tcl_WideInt) :  valuePtr points at an integer of given size
- 
- > **TCL\_TYPE\_U**(int \| long \| Tcl_WideInt) :  valuePtr points at an unsigned integer of given size
- 
- > **TCL\_TYPE\_D**(float \| double) : valuePtr points at a float or double
-
-Those 3 macro's use the sizeof() macro on the type to provide the requested size to Tcl\_GetValue(). Actually,
-you can use any integer type, so e.g. size\_t or intmax\_t work as well.
-  
- > int **Tcl\_GetUIntFromObj**\(Tcl\_Interp \*interp, Tcl\_Obj \*_objPtr_, void \*_valuePtr_\)
-
-This is a wrapper macro around **Tcl\_GetValue**, handling unsigned integer values only.
-
-For Tcl 9.0, the function **Tcl\_GetIntFromObj** is modified to return 1 when the Tcl\_Obj
-value is in the range -2147483648 .. 2147483647.
 
 # Implementation
 
