TIP 325 now in voting state

--- a/tip/325.md
+++ b/tip/325.md
@@ -1,6 +1,6 @@
 # TIP 325: System Tray and System Notification Access
 	Author:		David N. Welton <davidw@dedasys.com>, Kevin Walzer <kw@codebykevin.com>
-	State:		Draft
+	State:		Voting
 	Type:		Project
 	Tcl-Version:	8.7
 	Vote:		Pending
