--- a/tip/325.md
+++ b/tip/325.md
@@ -3,7 +3,7 @@
 	State:		Voting
 	Type:		Project
 	Tcl-Version:	8.7
-	Vote:		Pending
+	Vote:		In process
 	Created:	25-Aug-2008
 	Post-History:	
 	Keywords:	Tk, desktop integration
