TIP #591 to voting state (and fix typo in title)

--- a/tip/591.md
+++ b/tip/591.md
@@ -1,8 +1,8 @@
-# TIP 591: Rotate ttk::notebook window wtih mousewheel on tab
+# TIP 591: Rotate ttk::notebook window with mousewheel on tab
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        13-Nov-2020
 	Keywords:       Tk, bindings
 	Tcl-Version:    8.7
