Voting TIP #590 done

--- a/tip/590.md
+++ b/tip/590.md
@@ -1,13 +1,17 @@
 # TIP 590: Recommend lowercase Package Names
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        4-Nov-2020
 	Post-History:
 	Keywords:       package
 	Tcl-Version:    8.7
 	Tcl-Branch:	tip-590
+	Vote-Summary:	Accepted 3/0/2
+	Votes-For:	JN, KW, MC
+	Votes-Against:	none
+	Votes-Present:	FV, SL
 -----
 
 # Abstract
