Tweak TIP #481, bring in line with current implementation

--- a/tip/481.md
+++ b/tip/481.md
@@ -17,35 +17,40 @@ to be used with a `size_t *` parameter as well.
 # Rationale
 
 In Tcl 9, the range of various functions need to be increased. For example
-`Tcl_GetStringFromObj` now is limited to returning 32 bit for the maximum
-string length. This can be fixed by introducing an internal function
-`Tcl_GetStringFromObj2()` which has a `size_t *` parameter in stead of `int *`.
-On top of that, `Tcl_GetStringFromObj` is provided as a macro, which switches
+`Tcl_GetStringFromObj()` is currently limited to returning 31 bit for the
+maximum string length. This can be fixed by introducing a new internal
+function which has a `size_t *` parameter in stead of `int *`.
+On top of that, `Tcl_GetStringFromObj()` is provided as a macro, which switches
 between the two possible functions depending on the size of the parameter.
 
-The same is done for `Tcl_GetUnicodeFromObj` and `Tcl_GetByteArrayFromObj`.
+The same is done for `Tcl_GetUnicodeFromObj()` and `Tcl_GetByteArrayFromObj()`.
 
 This way, we have a compatibility layer, easing the transition to Tcl 9.
-In Tcl 8.7, although the parameter has type size\_t, the actual length range
-that can be returned is actually -1 up to 4294967294. In Tcl 9, the full
+In Tcl 8.7, although the parameter has type size\_t, the length range
+that can be returned is actually only 0 up to 4294967294. In Tcl 9, the full
 size\_t range is available.
+
+Commits like [this one](https://core.tcl-lang.org/tk/info/1597671a5e01ad99) (in Tk)
+will no longer be needed; the function `TkGetStringFromObj()` will just become
+obsolete: `Tcl_GetStringFromObj()` will be useable no matter the string length
+being stored in an `int` or a 'size_t' variable.
 
 # Specification
 
-Add to Tcl's stub table of public C routines the following new routines
+Add to Tcl's stub table of public C routines the following new (internal) routines
 
- > int **Tcl\_GetStringFromObj2**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
+ > int **TclGetStringFromObj**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
 
- > int **Tcl\_GetUnicodeFromObj2**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
+ > int **TclGetUnicodeFromObj**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
 
- > int **Tcl\_GetByteArrayFromObj2**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
+ > int **TclGetByteArrayFromObj**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
 
 Those 3 functions do exactly the same as their existing counterparts, only the _lengthPtr_
-parameter is of type size\_t in stead of int. The original 3 functions will be wrapped in
+parameter is of type `size_t` in stead of `int`. The original 3 functions will be wrapped in
 a macro of the same name, so depending on the actual size of the variable where _lengthPtr_
-points to, the switch between the two function versions are done automatically. So, the
-new functions don't need to be used in code, the original function can be used pointing to
-a size_t length variable as well.
+points to, the switch between the two function versions are done automatically. Therefore, the
+new functions are not supposed to be used directly in code, usage is fully transparent
+through the Tcl\_GetStringFromObj/Tcl\_GetUnicodeFromObj/Tcl\_GetByteArrayFromObj macros.
 
 # Implementation
 
