TIP #325 actually is in Final state since implementation was merged. Also, record votes in the TIP. And regenerate the TIP index.

--- a/tip/325.md
+++ b/tip/325.md
@@ -1,9 +1,13 @@
 # TIP 325: System Tray and System Notification Access
 	Author:		David N. Welton <davidw@dedasys.com>, Kevin Walzer <kw@codebykevin.com>
-	State:		Accepted
+	State:		Final
 	Type:		Project
 	Tcl-Version:	8.7
-	Vote:		Accepted
+	Vote:		Done
+	Vote-Summary:   Accepted 5/0/1
+	Votes-For:      SL, JN, MC, FV, KW
+	Votes-Against:  none
+	Votes-Present:  none
 	Created:	25-Aug-2008
 	Post-History:	
 	Keywords:	Tk, desktop integration
