TIP #591 vote finished

--- a/tip/591.md
+++ b/tip/591.md
@@ -1,12 +1,16 @@
 # TIP 591: Rotate ttk::notebook window with mousewheel on tab
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        13-Nov-2020
 	Keywords:       Tk, bindings
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-591
+	Vote-Summary:	Accepted 5/0/0
+	Votes-For:	JN, FV, KW, MC, SL
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 
 # Abstract
