Add requirement of VS 2015 or later

--- a/tip/592.md
+++ b/tip/592.md
@@ -38,6 +38,12 @@ the testing burden. In addition, it will allow the use of
 new APIs related to I/O, synchronization, threading etc. introduced in
 Windows 7.
 
+# Tool chain implications
+
+Use of Windows 7 API also requires support from compiler tool chains.
+In particular, with respect to Microsoft compilers, Tcl 8.7 will require
+Visual Studio 2015 or later. The Mingw gcc tool chain continues to be supported.
+
 # Implementation
 
 Use of newer API's will automatically prevent their loading into old Windows
