Mention Mingw-w64 as well

--- a/tip/592.md
+++ b/tip/592.md
@@ -42,7 +42,7 @@ Windows 7.
 
 Use of Windows 7 API also requires support from compiler tool chains.
 In particular, with respect to Microsoft compilers, Tcl 8.7 will require
-Visual Studio 2015 or later. The Mingw gcc tool chain continues to be supported.
+Visual Studio 2015 or later. The Mingw(-w64) gcc tool chain continues to be supported.
 
 # Implementation
 
