--- a/tip/592.md
+++ b/tip/592.md
@@ -2,7 +2,7 @@
 	Author:         Ashok P. Nadkarni <apnmbx-wits@yahoo.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Draft
+	Vote:           In progress
 	Created:        12-Dec-2020
 	Post-History:   
 	Tcl-Version:    8.7
