Cross linking and formal naming fixes

--- a/tip/430.md
+++ b/tip/430.md
@@ -168,7 +168,7 @@ _install_ is the first argument, set subsequent arguments are passed to a new fi
 in library **install.tcl**.
 
 **tclsh install** with no arguments is designed to return immediately with a normal return code,
-thus making it easy to test if a tclsh is tip430 savvy but running in autoconf:
+thus making it easy to test if a tclsh is TIP #430 savvy but running in autoconf:
 
     AS_IF([$TCLSH_PROG install],[
         ZIP_PROG=${TCLSH_PROG}
@@ -177,7 +177,7 @@ thus making it easy to test if a tclsh is tip430 savvy but running in autoconf:
         AC_MSG_RESULT([Can use Native Tclsh for Zip encoding])
     ])
 
-This tip only defines 2 function for install:
+This TIP only defines 2 function for install:
 
  * **tclsh install mkzip** ...
 
@@ -267,7 +267,7 @@ with impunity.
 
 ## Modifications to the Tcl build system
 
-Tcl will now attempt to find a zip encoder in the environment. If a tip430 savvy tclsh is
+Tcl will now attempt to find a zip encoder in the environment. If a TIP #430 savvy tclsh is
 discovered, that shell will be used. Failing that, the system will search for an executable
 named **zip**. Failing that, tcl will build it's own zip encoder.
 
