--- a/tip/474.md
+++ b/tip/474.md
@@ -112,11 +112,11 @@ will handle the X11 buttons numbered 8 up to 13.
 
 On macOS, the scaling for MouseWheel buttons has always
 been different from those on Windows, with a factor of 120.
-This means that applications assuming Tk 8.6 <MouseWheel>
+This means that applications assuming Tk 8.6 `<MouseWheel>`
 events will need to be modified to the new behaviour,
 otherwise the screen movements will be far too much.
 On Windows, everything works as before, no incompatibility
-there. Many applications already define the <MouseWheel>
+there. Many applications already define the `<MouseWheel>`
 binding on X11, even though in Tk 8.6 they are not
 used. Such applications will work on X11 in Tk 8.7 the
 same as in Tk 8.6
@@ -130,7 +130,7 @@ platform-independence.
 
 # Reference Implementation
 
-In tk branch tip474.
+In Tk branch `tip474`.
 
 # Copyright
 
