--- a/tip/510.md
+++ b/tip/510.md
@@ -16,7 +16,7 @@
 	                might be to just co-distribute, just as TDBC is with Tcl
 -----
 
-**This tip depends on tip556. It is deferred until tip556 is accepted.**
+**This tip depends on [TIP #556](556.md). It is deferred until TIP #556 is accepted.**
 
 # Abstract
 
