--- a/tip/518.md
+++ b/tip/518.md
@@ -120,7 +120,7 @@ Emiliano has provided a [ticket 2863003fff](https://core.tcl-lang.org/tk/info/28
 
 This solution is now continued with the tag "tip518-event-last-child-unmanaged".
 
-Koen Dankart and François Vogel have worked on the solution of the similar tip474, which is available in [branch tip-454](https://core.tcl-lang.org/tk/timeline?n=100&r=tip-454).
+Koen Dankart and François Vogel have worked on the solution of the similar [TIP #474](474.md), which is available in [branch tip-454](https://core.tcl-lang.org/tk/timeline?n=100&r=tip-454).
 This information may eventually also be relevant.
 
 # Rejected Proposal
@@ -135,12 +135,12 @@ Please read the discussion within the TIP which led to withdraw the proposal.
 
 This is a logical and elegant proposal.
 
-TIP 454 was withdrawn due to:
+TIP #454 was withdrawn due to:
 
    1. if the geometry manager is changed (ex: pack to grid), there is a flickering introduced.
    2. an additional Configure event was introduced which breaks present script.
 
-To invoke `<<Configure>>` instead `<<NoManagedChild>>` would trigger incompatibility 2 of TIP454.
+To invoke `<<Configure>>` instead `<<NoManagedChild>>` would trigger incompatibility 2 of TIP #454.
 Due to that, a new virtual event is proposed.
 
 # Copyright
