--- a/tip/554.md
+++ b/tip/554.md
@@ -17,10 +17,10 @@ as C data structures presented as a virtual file system.
 
 # Rationale
 
-In Tip430 we explored the various issues with integrating a Zip based file system into
+In [TIP #430](430.md) we explored the various issues with integrating a Zip based file system into
 interpreter initialization. While this process is finished and largely working, there
 are some awkward workarounds to manage the process of Zipfs encoding on exotic platforms.
-Some of these workaround involve forgoing the tip entirely.
+Some of these workaround involve forgoing the TIP entirely.
 
 While the use of Zipfs as the VFS of record seems to be somewhat controversial, performance
 gains from not having to access (and explor) the local file system for every interpreter
@@ -88,7 +88,7 @@ out encodings, and that reduces the size to 2.7mb.
 
 The main area for concern for Compatibility issues is Tk. Tk can be compiled against Tcl
 cores of various vintages, including those which are not equipped with the features of
-this tip. Because the VFS for Tk is self contained, and distributed by virtue of being
+this TIP. Because the VFS for Tk is self contained, and distributed by virtue of being
 compiled into the library itself, for most users there will be no change. (Save, of course,
 for the improved load time.)
 
@@ -97,16 +97,16 @@ to populate their own values for tcl_library and tk_library and those contracts 
 be honored. The C-based VFS will only load if no other candidate to fill the role of the
 /library file system has stepped forward by the time the interpreter initializes.
 
-# Interactions with tip430
+# Interactions with TIP #430
 
-This tip only replaces the portions of tip430 dealing with interpreter initialization.
-In all other respects the goals of this tip and non-startup goals of tip430 are parallel
+This TIP only replaces the portions of [TIP #430](430.md) dealing with interpreter initialization.
+In all other respects the goals of this tip and non-startup goals of TIP #430 are parallel
 to one another.
 
 # Inspiration
 
 This technology is influenced by Roy Keene's work with XVFS. It also draws on the lessons
-learned from implementing tip430.
+learned from implementing TIP #430.
 
 # Copyright
 
