--- a/tip/591.md
+++ b/tip/591.md
@@ -41,7 +41,7 @@ for {set index 1} {$index < 10} {incr index} {
 }
 </pre>
 
-This works for me on Tk8.6.10 on Windows.
+This works for me on Tk 8.6.10 on Windows.
 
 For me, this is very handy and intuitive.
 
@@ -55,7 +55,7 @@ ttk::bindMouseWheel TNotebook { ttk::notebook::CycleTab %W }
 
 which activates this functionality.
 
-There is a Tk branch tip591 including this functionality.
+There is a Tk branch, `tip591`, including this functionality.
 
 # Copyright
 
